# CyberShield

./: .gitignore  INSTALL.md  README.md  cyberlab.bat  docker-compose.yml  harden_generate.bat  harden_system.sh  main.py  pyproject.toml  requirements-windows.txt  setup_ids.sh  setup_ssh_key.sh
.claude/: settings.local.json
agents/: metatron.py
cli/: main.py
core/: graph.py
cyberlab_assistant.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
slm/: Dockerfile  __init__.py  cli.py  command_executor.py  requirements.txt  terminal_interface.py
slm/api/: main.py
slm/config/: config.yaml  patterns.yaml
slm/cyberlab/: __init__.py  model.py  preprocessing.py  security_engine.py  security_processor.py
slm/cyberlab/kali_tools/: orchestrator.py  tool_handlers.py  tool_manager.py  workflows.yaml
slm/cyberlab/patterns/: security_patterns.yaml
slm/llm/: __init__.py  anthropic.py  base.py  ollama.py  openai.py
slm/platform/: __init__.py  windows.py
tools/: nmap.py
